--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "homepage": "https://github.com/Gabeyocum28/startup#readme",
   "devDependencies": {
     "vite": "^7.1.9"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.8",
+    "react-bootstrap": "^2.10.10",
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.9.4"
   }
 }
