--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "type": "commonjs",
   "homepage": "https://github.com/Gabeyocum28/startup#readme",
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.7.0",
     "vite": "^7.1.9"
   },
   "dependencies": {
     "bootstrap": "^5.3.8",
+    "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.4"
