--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "homepage": "https://github.com/Gabeyocum28/startup#readme",
   "devDependencies": {
     "@vitejs/plugin-react": "^4.7.0",
