--- a/service/package.json
+++ b/service/package.json
@@ -73,7 +73,8 @@
     "unpipe": "^1.0.0",
     "uuid": "^13.0.0",
     "vary": "^1.1.2",
-    "wrappy": "^1.0.2"
+    "wrappy": "^1.0.2",
+    "ws": "^8.18.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
